clusters/rubase/talk-to-work/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: talk-to-work-bridge
  namespace: talk-to-work
  labels:
    kubernetes.io/service-name: talk-to-work-bridge
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 18787
endpoints:
  - addresses:
      - 10.42.0.1
    conditions:
      ready: true
      serving: true
      terminating: false
