clusters/rubase/talk-to-work/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talk-to-work-bridge
  namespace: talk-to-work
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 18787
